[package]
name = "pro"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
macroquad = "0.3"
rapier2d = {version="0.10" , features=["simd-stable"]}
rand = "0.7"

[[bin]]
name = "pro"
target = "src/main.rs"
